--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,8 @@
 body {
 	font: 1em/1.6em Roboto, Arial, Tahoma sans-serif;
 	color: #353535;
+	background: url(../img/head_bg.jpg) fixed;
+	background-size: cover;
 }
 
 img{
@@ -31,6 +33,10 @@ h1, h2, h3, h4 {
 	background: rgba(40, 76, 88, 0.498039);
 }
 
+.whiteout {
+	background: #fff;
+}
+
 .red {
 	color: red;
 }
@@ -42,6 +48,10 @@ h1, h2, h3, h4 {
 
 .button_big {
 	padding: 40px 0;
+}
+
+.buuton_left {
+	text-align: left;
 }
 
 .link {
@@ -109,13 +119,13 @@ h1, h2, h3, h4 {
 	font-size: 24px;
 }
 
-.direct, .polza, .rezult, .time {
+.direct, .polza, .rezult, .time, .aboutme, .more, .foot {
 	padding: 40px 0;
 	background: #fff;
 	text-align: center;
 }
 
-.direct__h2, .polza__h3, .rezult__h3 {
+.direct__h2, .polza__h3, .rezult__h3, .rew__h3, .aboutme__h3, .more__h4 {
 	font-size: 32px;
 }
 
@@ -184,4 +194,100 @@ h1, h2, h3, h4 {
 font-size: 18px;
 color: #000;
 text-transform: uppercase;
+}
+
+.rew {
+	padding: 40px 0;
+}
+
+.rew__h3, .rew__desc, .rew__name {
+	color: #fff;
+	text-shadow: 1px 1px 2px #000;
+	text-align: center;
+	margin: 0 0 10px 0;
+}
+
+.rew__block {
+	float: left;
+	width: 47%;
+	margin-top: 40px;
+}
+
+.rew__block_mr6 {
+	margin-right: 6%;
+}
+
+.rew__img {
+	border-radius: 3px;
+	box-shadow: 1px 1px 2px #000;
+}
+
+.rew__foot {
+	float: left;
+	width: 27%;
+	text-align: center;
+}
+
+.rew__text {
+	float: right;
+	width: 68%;
+	background: #fff;
+	border-radius: 3px;
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+.rew__p {
+	margin: 0;
+}
+
+.aboutme, .aboutme__h3 {
+	text-align: left;
+}
+
+.aboutme__img {
+	float: left;
+	margin: 0 40px 0 0;
+}
+
+.aboutme__p {
+	font-size: 19px;
+	margin: 10px 0 40px 0;
+}
+
+.more__left {
+	width: 38%;
+	float: left;
+}
+
+.more__right {
+	width: 60%;
+	float: right;
+}
+
+.more__h4 {
+	text-align: left;
+	margin: 60px 0 20px;
+}
+
+.foot__left {
+	text-align: left;
+	float: left;
+	width: 50%;
+}
+
+.foot__right {
+	text-align: right;
+	float: right;
+	width: 50%;
+}
+
+.foot__p {
+	margin: 0;
+	font-size: 14px;
+}
+
+.foot__link {
+	color: rgb(55, 103, 120);
+	text-decoration: underline;
 }
